--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   table_calendar: ^3.2.0
+  toast: ^0.3.0
+  marquee: ^2.3.0
+  cached_network_image: ^3.4.1
+  shared_preferences: ^2.5.3
+  flutter_svg: ^2.2.0
+  flutter_html: ^3.0.0
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
