--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_svg: ^2.2.0
   flutter_html: ^3.0.0
   lottie: ^3.3.1
+  file_picker: ^10.2.0
 
 dev_dependencies:
   flutter_test:
