--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,12 @@ dependencies:
   flutter_html: ^3.0.0
   lottie: ^3.3.1
   file_picker: ^10.2.0
+  app_settings: ^6.1.1
+  dotted_border: ^3.1.0
+  camera: ^0.10.5
+  image_picker: ^1.1.2
+  url_launcher: ^6.3.2
+  package_info_plus: ^8.3.0
 
 dev_dependencies:
   flutter_test:
