--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   image_picker: ^1.1.2
   url_launcher: ^6.3.2
   package_info_plus: ^8.3.0
+  dio: ^5.8.0+1
+  flutter_document_picker: ^5.2.3
 
 dev_dependencies:
   flutter_test:
